<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Agregar">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:scrollbars="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lblTitulo"
                android:textAlignment="center" />

            <EditText
                android:id="@+id/txtTitulo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:textAlignment="center" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lblDescripcion"
                android:textAlignment="center" />

            <EditText
                android:id="@+id/txtDescripcion"
                android:layout_width="match_parent"
                android:layout_height="110dp"
                android:inputType="textMultiLine"
                android:textAlignment="center" />

            <RadioGroup
                android:id="@+id/rdgTipo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/rdTarea"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/rdTarea" />

                <RadioButton
                    android:id="@+id/rdNota"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/rdNota" />
            </RadioGroup>

            <LinearLayout
                android:id="@+id/lnrRecordatoria"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <Button
                    android:id="@+id/btnAgregarAlarma"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="btnAgregarAlarmaOnClick"
                    android:text="@string/terminacion" />

                <TextView
                    android:id="@+id/lblRecordatorio"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center" />
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/agregarRecordatorio"
                    android:onClick="AgregarRecordatorio"
                    />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/verRecordatorios"
                    android:id="@+id/btnVerRecordatorios"
                    android:onClick="MostarRecordatorios"
                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/lblArchivos"
                    android:textAlignment="center" />

            </LinearLayout>

            <Button
                android:id="@+id/btnArchivos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btnArchivos"
                android:onClick="btnArchivosOnClick"
                />

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:id="@+id/Imagen"
                />
            <android.support.v7.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:id="@+id/rcclcArchivoLista"
                >

            </android.support.v7.widget.RecyclerView>
            <Button
                android:id="@+id/btnGuardar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="btnGuardarOnClick"
                android:text="@string/btnGuardar" />
        </LinearLayout>

    </ScrollView>
</android.support.constraint.ConstraintLayout>